# CMAB-for-quest-selection

./: .gitignore  AIDirector.cpp  AIDirector.h  ActionStruct.h  ActionUtils.cpp  Actions.cpp  Actions.h  CMakeLists.txt  EquippableItemsList.h  Game.cpp  Game.h  ItemStruct.h  Locations.h  Operators.cpp  Operators.h  Player.cpp  Player.h  PlayerModel.cpp  PlayerModel.h  README.md  SchematicList.cpp  SchematicList.h  main.cpp  visualize.py
Automatic Testing/: AutomaticTest.cpp  AutomaticTest.h  JobBoard.cpp  JobBoard.h
Automatic Testing/bots/: AttackBot.cpp  AttackBot.h  Bot.cpp  Bot.h  GatherBot.cpp  GatherBot.h
Enums/: AIDirectorBehavior.h  Actions.h  Consumables.h  Creatures.h  GatheredResources.h  NaturalResources.h  QuestCategory.h  RawMaterials.h  RefinedResource.h
Objects/: ActionUtils.cpp  ActionUtils.h  BlueprintsList.cpp  BlueprintsList.h  BuildingsList.cpp  BuildingsList.h  EquippableItemsList.cpp  EquippableItemsList.h  Merchant.cpp  Merchant.h  ObjectivesGenerator.cpp  ObjectivesGenerator.h  SchematicList.h  SelfGoalsList.cpp  SelfGoalsList.h
Structs/: ActionStruct.h  BlueprintStruct.h  BuildingStruct.h  EquippableItemStruct.h  ItemStruct.h  ObjectiveStruct.h  SchematicStruct.h  SelfGoalStruct.h
cmake/: FindOpenCV.cmake
output/: example.csv
